--- a/package.json
+++ b/package.json
@@ -16,5 +16,11 @@
   "bugs": {
     "url": "https://github.com/levickane/googlebooksearch/issues"
   },
-  "homepage": "https://github.com/levickane/googlebooksearch#readme"
+  "homepage": "https://github.com/levickane/googlebooksearch#readme",
+  "dependencies": {
+    "axios": "^0.21.1",
+    "express": "^4.17.1",
+    "if-env": "^1.0.4",
+    "mongoose": "^5.12.13"
+  }
 }
