--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
   "homepage": "https://github.com/levickane/googlebooksearch#readme",
   "dependencies": {
     "axios": "^0.21.1",
+    "bootstrap": "^5.0.1",
     "express": "^4.17.1",
     "if-env": "^1.0.4",
-    "mongoose": "^5.12.13"
+    "mongoose": "^5.12.13",
+    "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
     "concurrently": "^6.2.0"
